<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:orientation="vertical"
          android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />


            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_price"
                android:inputType="numberDecimal" />

            <ImageView
                android:id="@+id/increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/increase"/>
            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_quantity"
                android:inputType="number" />
            <ImageView
                android:id="@+id/decrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/decrease"/>



            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone"
                android:inputType="number" />
            <Button
                android:id="@+id/call_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/baseline_call_black_18dp"
                />
      </LinearLayout>


    </LinearLayout>

</LinearLayout>